Banner Alignment Fixed - Banner aligned to baseline to move header logo down to correct hight

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,8 +38,13 @@ footer {
 
 .banner {
   display: flex;
-  align-items: center;
+  align-items: baseline;
   justify-content: space-between;
+}
+
+.hero .logo {
+  font-size: 24px;
+  min-width: 150px;
 }
 
 .title {
@@ -62,11 +67,6 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.hero .logo {
-  font-size: 24px;
-  min-width: 150px;
 }
 
 .links {
